; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_superequalizer.c_hn.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_superequalizer.c_hn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { float, float }

@NBANDS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i32, %struct.TYPE_3__*, float)* @hn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @hn(i32 %0, %struct.TYPE_3__* %1, float %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca i32, align 4
  %10 = alloca float, align 4
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store float %2, float* %6, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i64 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load float, float* %14, align 4
  %16 = load float, float* %6, align 4
  %17 = call float @hn_lpf(i32 %11, float %15, float %16)
  store float %17, float* %8, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i64 0
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 1
  %21 = load float, float* %20, align 4
  %22 = load float, float* %8, align 4
  %23 = fmul float %21, %22
  store float %23, float* %7, align 4
  store i32 1, i32* %9, align 4
  br label %24

24:                                               ; preds = %64, %3
  %25 = load i32, i32* %9, align 4
  %26 = load i32, i32* @NBANDS, align 4
  %27 = add nsw i32 %26, 1
  %28 = icmp slt i32 %25, %27
  br i1 %28, label %29, label %39

29:                                               ; preds = %24
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %31 = load i32, i32* %9, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load float, float* %34, align 4
  %36 = load float, float* %6, align 4
  %37 = fdiv float %36, 2.000000e+00
  %38 = fcmp olt float %35, %37
  br label %39

39:                                               ; preds = %29, %24
  %40 = phi i1 [ false, %24 ], [ %38, %29 ]
  br i1 %40, label %41, label %67

41:                                               ; preds = %39
  %42 = load i32, i32* %4, align 4
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %44 = load i32, i32* %9, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i64 %45
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 0
  %48 = load float, float* %47, align 4
  %49 = load float, float* %6, align 4
  %50 = call float @hn_lpf(i32 %42, float %48, float %49)
  store float %50, float* %10, align 4
  %51 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %52 = load i32, i32* %9, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i64 %53
  %55 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %54, i32 0, i32 1
  %56 = load float, float* %55, align 4
  %57 = load float, float* %10, align 4
  %58 = load float, float* %8, align 4
  %59 = fsub float %57, %58
  %60 = fmul float %56, %59
  %61 = load float, float* %7, align 4
  %62 = fadd float %61, %60
  store float %62, float* %7, align 4
  %63 = load float, float* %10, align 4
  store float %63, float* %8, align 4
  br label %64

64:                                               ; preds = %41
  %65 = load i32, i32* %9, align 4
  %66 = add nsw i32 %65, 1
  store i32 %66, i32* %9, align 4
  br label %24

67:                                               ; preds = %39
  %68 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %69 = load i32, i32* %9, align 4
  %70 = sext i32 %69 to i64
  %71 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %68, i64 %70
  %72 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %71, i32 0, i32 1
  %73 = load float, float* %72, align 4
  %74 = load i32, i32* %4, align 4
  %75 = call float @hn_imp(i32 %74)
  %76 = load float, float* %8, align 4
  %77 = fsub float %75, %76
  %78 = fmul float %73, %77
  %79 = load float, float* %7, align 4
  %80 = fadd float %79, %78
  store float %80, float* %7, align 4
  %81 = load float, float* %7, align 4
  ret float %81
}

declare dso_local float @hn_lpf(i32, float, float) #1

declare dso_local float @hn_imp(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
